1.0.13
- when scored in multiple matches at the same time, multiple notifiactions will be given
- extra space in selected teams box


1.0.12
- extra time to select the time the lamps will blink
- configscreen 3 to select the time
- changed oldlamparray to string type
- fixed scenes not working (bridge not saved)
- configscreen 3 to select save the bridge uuid correctly
- all console.log comment lines removed
- animation color changed to yellow (was lightgreen)
- demomode added


1.0.11
-error fixed in animation

1.0.10
- updateMatchesList of til echanged changed
- oldlampstatus improved (will be stored every scrape run)
- when no matches in list, scrape timer will be set to 120s
- configscreen split into multiple screens
- pixelsize newtextlabel changed to 20:16
- language to dutch
- screens changed for use with Toon1
- color in dim changes




	

1.0.9
- tile changed so that the gridview is moved to the right to give some space for the toon controls when holding the tile (red cross, remove tile)
- dimState added to tile
 
1.0.0
- initial release